hphp/hack/test/typecheck/coeffects/ctor.php.exp
File "ctor.php", line 24, characters 14-27:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "ctor.php", line 23, characters 32-33:
  From this declaration, the context of this function body provides the capability set {}
  File "ctor.php", line 20, characters 33-38:
  But the function being called requires the capability Output
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
